# understand-paxos

./: Cargo.toml  LICENSE  README.md
election/: Cargo.toml  Election.tla
election/src/: main.rs
multi_decree/: Cargo.toml  MultiDecreeParliement.tla
multi_decree/src/: main.rs
single_decree_synod/: Cargo.toml  SingleDecreeSynod.tla
single_decree_synod/src/: main.rs
