[package]
name = "single_decree_synod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge_repo = { git = "https://github.com/automerge/spanreed", rev = "f95edd1f548f3822dcced04607bea794d8887d6e", features = ["tokio"] }
automerge = { version = "0.4.1" }
autosurgeon = "0.7.1"
clap = { version = "4.2.5", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["json", "blocking"], default-features = false }
axum = { version = "0.6.18" }
axum-macros = "0.3.7"
tokio = { version = "1.27", features = ["full"] }
futures = { version = "0.3.28" }
